prevgen/pirateapps/kustomize/overlays/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  selector:
    app: lidarr
  ports:
    - name: lidarr
      port: 8686
      targetPort: 8686
