prevgen/pirateapps/kustomize/overlays/lidarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: lidarr.lab.tailandtraillabs.com
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`lidarr.lab.tailandtraillabs.com`)
      services:
        - name: lidarr
          port: 8686
  tls:
    secretName: wildcard-tls-prod
